--- a/style.css
+++ b/style.css
@@ -1,11 +1,38 @@
 *{
-  margin = 0;
-  padding = 0;
+  margin : 0;
+  padding : 0;
   box-sizing: border-box;
 }
 .main{
-  position: absolute;
-  top: 100px;
-  left: 500px
-
+  padding: 20px;
+  border: 3px solid black;
+  width: 300px;
+}
+.result{
+  border-top: 2px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  font-size: 30px;
+  text-align: right;
+  padding: 5px;
+}
+.buttons{
+  border: 2px solid black;
+  font-size: 30px;
+}
+.row_one{
+  border-bottom: 2px solid black;
+  padding: 5px;
+}
+.row_two{
+  border-bottom: 2px solid black;
+  padding: 5px;
+}
+.row_three{
+  border-bottom: 2px solid black;
+  padding: 5px;
+}
+.row_four{
+  border-bottom: 2px solid black;
+  padding: 5px;
 }
