--- a/style.css
+++ b/style.css
@@ -2,11 +2,16 @@
   margin : 0;
   padding : 0;
   box-sizing: border-box;
+  position: relative;
 }
 .main{
   padding: 20px;
   border: 3px solid black;
-  width: 300px;
+  width: 215px;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  background-color: coral;
 }
 .result{
   border-top: 2px solid black;
@@ -14,25 +19,34 @@
   border-right: 2px solid black;
   font-size: 30px;
   text-align: right;
-  padding: 5px;
+  padding: 10px;
+  background-color: white;
 }
 .buttons{
   border: 2px solid black;
   font-size: 30px;
+  background-color: wheat;
 }
 .row_one{
-  border-bottom: 2px solid black;
-  padding: 5px;
+  border-bottom: 2px solid black;  
 }
 .row_two{
-  border-bottom: 2px solid black;
-  padding: 5px;
+  border-bottom: 2px solid black; 
 }
 .row_three{
-  border-bottom: 2px solid black;
-  padding: 5px;
+  border-bottom: 2px solid black;  
 }
-.row_four{
-  border-bottom: 2px solid black;
-  padding: 5px;
+
+.button{  
+  padding:0px 10px;
+  width: 30px;
+  text-align: justify;
+  height: 10px;
+}
+.button:hover{
+  cursor: pointer;
+  background-color: lightgray;
+}
+#division{
+  width: 30px;
 }
