--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
   border: 2px solid black;
   font-size: 30px;
   background-color: wheat;
+  margin: 0px;
 }
 .row_one{
   border-bottom: 2px solid black;  
